<resources>
    <string name="app_name">MobiCS</string>

    <string name="home">Home</string>
    <string name="mobics">MobiCS</string>
    <string name="favorites">Favorite</string>
    <string name="favorite_tasks">Favorite tasks</string>
    <string name="responded">Responded</string>
    <string name="responded_tasks">Responded tasks</string>
    <string name="sent">Sent</string>
    <string name="sent_tasks">Sent tasks</string>
    <string name="profile">My profile</string>
    <string name="my_profile">My profile</string>
    <string name="sensors">Device sensors</string>
    <string name="device_sensors">Device sensors</string>
    <string name="settings">Settings</string>
    <string name="help">Help &amp; feedback</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="title_activity_help">Help &amp; feedback</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About MobiCS</string>
    <string name="human_tasks">Human tasks</string>
    <string name="sensing_tasks">Sensing tasks</string>
    <string name="share">Share</string>
    <string name="reply">Reply</string>
    <string name="responses">Responses</string>
    <string name="views">Views</string>
    <string name="title_activity_welcome">Welcome to MobiCS</string>
    <string name="login">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="please_login">Please Log In</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_failed">Signup failed</string>
    <string name="incorrect_combination">Incorrect email/password combination!</string>
    <string name="enter_cridentials">Please enter your email and password!</string>
    <string name="passwords_dont_match">Password confirmation does not match the original password!</string>
    <string name="fill_all_signup_details">All fields are required! Please enter email, username and password with confirmation.</string>
    <string name="title_activity_new_human_task">New human task</string>
    <string name="title_activity_new_sensing_task">New sensing task</string>
</resources>
