<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: With new release of support package, disable multiple selections between groups. -->
    <group
        android:id="@+id/grp_tasks"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_responded"
            android:icon="@drawable/ic_reply_all_black_24dp"
            android:title="@string/responded" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/sent" />
    </group>
    <group
        android:id="@+id/grp_profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_phonelink_ring_black_24dp"
            android:title="@string/sensors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@+id/grp_help"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>
</menu>